objects/GEMS_BP_BA_Association__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Agreement__c</fullName>
        <label>Benefit Agreement</label>
        <referenceTo>GEMS_Benefit_Agreement__c</referenceTo>
        <relationshipLabel>BA Associations</relationshipLabel>
        <relationshipName>BA_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Billing_Profile_Name__c</fullName>
        <formula>Billing_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Profile__c</fullName>
        <label>Billing Profile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Case__c</field>
                <operation>equals</operation>
                <valueField>GEMS_Billing_Profile__c.Case__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GEMS_Billing_Profile__c</referenceTo>
        <relationshipLabel>BP Associations</relationshipLabel>
        <relationshipName>BP_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>BP Associations</relationshipLabel>
        <relationshipName>BP_Associations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsNew</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS BP BA Association</label>
    <nameField>
        <label>BP BA Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEMS BP BA Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>